# thumbhash-python

./: .gitignore  README.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: smokeshow.yml  test.yml
scripts/: format.sh  lint.sh
tests/: data.py  test.py  test_cli.py  test_decode.py  test_encode.py
thumbhash/: __init__.py  cli.py  decode.py  encode.py  hash.py
