[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thumbhash-python"
description = 'A Python implementation of the Thumbhash image placeholder generation algorithm.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "Yohann MARTIN", email = "contact@codexus.fr" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development",
  "Typing :: Typed",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "Pillow >=8.0.0,<11.0.0",
  "typer[all] >=0.7.0,<1.0.0"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/Astropilot/thumbhash-python#readme"
Issues = "https://github.com/Astropilot/thumbhash-python/issues"
Source = "https://github.com/Astropilot/thumbhash-python"

[project.optional-dependencies]
dev = [
  "types-Pillow >=10.0.0",

  "mypy ==1.7.1",
  "ruff ==0.1.8",
  "devtools[pygments] ==0.12.2",
  "pytest >=7.1.3,<8.0.0",
  "coverage[toml] >=6.5.0,<8.0"
]

[project.scripts]
thumbhash = "thumbhash.cli:main"

[tool.hatch.version]
path = "thumbhash/__version__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/.vscode",
  "/scripts",
]

[tool.hatch.build.targets.wheel]
packages = ["thumbhash"]

[tool.mypy]
strict = true

[tool.coverage.run]
parallel = true
source = [
    "tests",
    "thumbhash"
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by ruff
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex,
    "W191",  # indentation contains tabs
    "B904"   # Opinionated warning on exception chaining
]
[tool.ruff.format]
line-ending = "lf"
quote-style = "double"
indent-style = "space"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-third-party = ["thumbhash", "typer", "PIL"]

[tool.pyright]
reportUnknownMemberType=false
reportUnknownVariableType=false
reportUnknownArgumentType=false
