[project]
name = "thumbhash-python"
authors = [
  { name = "Yohann MARTIN", email = "contact@codexus.fr" },
]
version = "1.0.2"
requires-python = ">=3.10"
license = "MIT"
license-files = [ "LICENSE" ]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development",
  "Typing :: Typed",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "Pillow >=12.1.0,<13.0.0",
  "typer >=0.22.0,<1.0.0"
]

[dependency-groups]
tests = [
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
]
lint = [
  "mypy>=1.20.2",
  "ruff>=0.15.12",
]
dev = [
    { include-group = "tests" },
    { include-group = "lint" },
]

[project.scripts]
thumbhash = "thumbhash.cli:main"

[project.urls]
Documentation = "https://github.com/Astropilot/thumbhash-python#readme"
Issues = "https://github.com/Astropilot/thumbhash-python/issues"
Source = "https://github.com/Astropilot/thumbhash-python"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "thumbhash"
module-root = ""
source-include = ["tests/**"]

[tool.mypy]
strict = true

[tool.coverage.run]
parallel = true
source = [
    "tests",
    "thumbhash"
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",        # pycodestyle errors
    "W",        # pycodestyle warnings
    "F",        # pyflakes
    "I",        # isort
    "A",
    "C",        # flake8-comprehensions
    "B",        # flake8-bugbear
    "UP",       # pyupgrade,
    "N",        # pep8-naming
    "S",        # flake8-bandit
    "ASYNC",    # flake8-async
    "DTZ",      # flake8-datetimez
    "PTH",      # flake8-use-pathlib
    "RUF",      # Ruff-specific rules
]
ignore = [
    "E501",  # line too long, handled by ruff
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "A001",  # shadowing a Python builtin
    "A002",  # shadowing a Python builtin
    "A004",  # shadowing a Python builtin
    "C901",  # function too complex
]


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**.py" = ["S101"]

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"
indent-style = "space"
